# openevolve-smiles25

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.SMILES.md  README.md  _get_scores_from_logs.ipynb  pyproject.toml  requirements.txt  run_and_parse.py
.github/workflows/: python-test.yml  release.yml
configs/: README.md  default_config.yaml
data/: align.ipynb  constructing_prompts.ipynb  data.pkl  data_complex.pkl  data_new.pkl  gear_wheel.stl  generate.ipynb  read_data.ipynb  zero_shot.ipynb
data/zero_shot/: gear_o4-mini_zero_shot.csv  gear_qwen-2.5-72b.stl  gear_qwen-2.5-72b_zero_shot.csv  gear_qwen-2.5-coder-32b_zero_shot.csv  ladder_o4-mini_zero_shot.csv  ladder_qwen-2.5-72b_zero_shot.csv  ladder_qwen-2.5-coder-32b_zero_shot.csv  open_box_o4-mini_zero_shot.csv  open_box_qwen-2.5-72b_zero_shot.csv  open_box_qwen-2.5-coder-32b.stl  open_box_qwen-2.5-coder-32b_zero_shot.csv  spheres_o4-mini_zero_shot.csv  spheres_qwen-2.5-72b.stl  spheres_qwen-2.5-72b_zero_shot.csv  spheres_qwen-2.5-coder-32b.stl  spheres_qwen-2.5-coder-32b_zero_shot.csv  tube_o4-mini_zero_shot.csv  tube_qwen-2.5-72b_zero_shot.csv  tube_qwen-2.5-coder-32b.stl  tube_qwen-2.5-coder-32b_zero_shot.csv
examples/: README.md
oneshot_examples/: oneshot.ipynb
openevolve/: cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py  iteration.py  threaded_parallel.py
scripts/: visualizer.py
test_cad/: box.stl  config.yaml  evaluate.ipynb  evaluate.py  evaluate_cad_code.py  evaluator.py  evolved_block.py  holed_box.py  initial_program.py  tmp.txt  visualize.ipynb
tests/: test_artifacts.py  test_artifacts_integration.py  test_cascade_validation.py  test_checkpoint_resume.py  test_database.py  test_evaluator_timeout.py  test_island_migration.py  test_map_elites_features.py  test_valid_configs.py
(+176 files in other folders)
