[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openevolve"
dynamic = ["version"]
description = "Open-source implementation of AlphaEvolve"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "codelion"}
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.22.0",
    "tqdm>=4.64.0",
    "flask",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.6.1",
    "cadquery>=2.5.2",
    "trimesh[easy]>=4.7.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pyglet>=2.1.6",
    "manifold3d>=3.2.0",
    "pot>=0.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
openevolve-run = "openevolve.cli:main"

[tool.setuptools.packages.find]
include = ["openevolve*"]

[tool.setuptools.dynamic]
version = {attr = "openevolve._version.__version__"}
